# courseflow-platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin_catalog.py  auth.py  courses.py  health.py  professor.py  professors.py  registration.py  registrations.py  rooms.py  scheduling.py  sections.py  student_profiles.py  sync.py  waitlists.py  websocket.py
backend/app/core/: config.py  logging.py  metrics.py  security.py  telemetry.py
backend/app/db/: base.py  curriculum_seed.py  curriculum_seed_data.py  demo_seed.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_registration_slice.py  0002_academic_foundation.py  (+4 more)
backend/app/integrations/: ins_client.py
backend/app/modules/auth/: dependencies.py  models.py  schemas.py  service.py
backend/app/modules/courses/: repository.py  schemas.py  service.py
backend/app/modules/platform/: celery_app.py  rate_limiter.py  redis_client.py
backend/app/modules/professors/: errors.py  repository.py  schemas.py  service.py
backend/app/modules/registration/: availability.py  errors.py  publishers.py  repository.py  schemas.py  service.py
backend/app/modules/rooms/: repository.py  schemas.py  service.py
backend/app/modules/scheduling/: repository.py  schemas.py  service.py
backend/app/modules/students/: models.py  schemas.py  service.py
backend/app/modules/sync/: schemas.py  simple_scraper.py
backend/app/modules/waitlists/: schemas.py  service.py
backend/app/modules/websocket/: manager.py
backend/app/tests/: conftest.py  factories.py  test_auth_api.py  test_catalog_api.py  test_curriculum_seed.py  test_platform_reliability_latest.py  test_professor_rooms_api.py  test_registration_api.py  test_registration_rules.py  test_rooms_scheduling_api.py  test_waitlists_health_platform.py
backend/app/tests/fixtures/: dashboard.html  login_page.html  transcript.html
backend/scripts/: prove_concurrency.py  seed_registration_demo.py
docs/: 03-data-model.md  (+11 more)
(+19 files in other folders)
