[project]
name = "crsp-backend"
version = "0.1.0"
description = "CRSP - Course Registration and Scheduling Platform (FastAPI backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2",
    "httpx>=0.28",
    "email-validator>=2.3",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
